--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -1,5 +1,91 @@
 //Micronaut {version} includes the following changes:
 
+== 3.5.0
+
+=== GraalVM 22.1.0
+
+Micronaut framework 3.5 supports https://www.graalvm.org/release-notes/22_1/[GraalVM 22.1.0].
+
+https://micronaut-projects.github.io/micronaut-gradle-plugin/latest/[Micronaut Gradle Plugin v3.4.0] and https://github.com/micronaut-projects/micronaut-maven-plugin/releases/tag/v3.3.0[Micronaut Maven Plugin v3.3.0] support GraalVM 22.1.0.
+
+=== Incremental Compilation for Gradle Builds
+
+Micronaut framework 3.5 supports fully incremental compilation, including GraalVM metadata for Gradle Builds.
+
+=== Micronaut Data
+
+https://github.com/micronaut-projects/micronaut-data/releases/tag/v3.4.0[Micronaut Data 3.4.0] supports:
+
+- Postgres enums for JDBC.
+- Pagination for reactive repositories and specifications.
+- Pagination for async, coroutines repositories, and specifications.
+
+=== Turbo Integration
+
+Micronaut Views adds https://micronaut-projects.github.io/micronaut-views/latest/guide/#turbo[integration with Turbo]
+
+=== New Module - Micronaut Microstream
+
+https://micronaut-projects.github.io/micronaut-microstream/snapshot/guide/[Micronaut Microstream] eases working with https://microstream.one[MicroStream], a native Java object graph storage engine.
+
+=== @Scheduled with Time Zones
+
+Optionally, you can specify a time zone when using the <<scheduling,`@Scheduled` annotation>>.
+
+[source,java]
+----
+@Scheduled(cron = '1/33 0/1 * 1/1 * ?', zoneId = "America/Chicago")
+void runCron() {
+...
+..
+----
+
+=== Support validation groups with `@Validated`
+
+You can enforce a subset of constraints using <<validationGroups,validation groups>> using groups on the `@Validated`.
+
+=== Advanced Listener Configuration
+
+Micronaut framework 3.5.0 offers more flexibility in configuring the HTTP Server. Instead of configuring a single port, you
+<<listener,can specify each listener manually>>.
+
+=== EPHEMERAL FACTORIES
+
+A <<factories,Factory>> has the default scope `@Singleton`, and it is destroyed with the context. Since Micronaut framework v3.5.0, you can dispose of the factory after producing a bean by annotating your factory class with `@Prototype` and `@Factory`
+
+=== Module upgrades
+
+- https://github.com/micronaut-projects/micronaut-test/releases/tag/v3.2.0[Micronaut Test 3.2.0] adds support for KoTest 5.
+- https://github.com/micronaut-projects/micronaut-aws/releases/tag/v3.5.0[Micronaut AWS 3.5.0] adds a new module https://micronaut-projects.github.io/micronaut-aws/latest/guide/#cdk[Micronaut AWS CDK]. It also upgrades to the latest versions of the AWS SDKs.
+- https://github.com/micronaut-projects/micronaut-micrometer/releases/tag/v4.3.0[Micronaut Micrometer 4.3.0] updates to Micrometer 1.9.0.
+- https://github.com/micronaut-projects/micronaut-gcp/releases/tag/v4.2.0[Micronaut GCP 4.2.0] updates to `grpc-auth`
+1.45.1 and `grpc-netty-shaded`. Moreover, we have clarified the documentation to support GraalVM Native Images when using the GCP libraries, and the Micronaut GCP Bom now includes the `com.google.cloud:native-image-support` dependency.
+- https://github.com/micronaut-projects/micronaut-aot/releases/tag/v1.1.0[Micronaut AOT 1.1.0]
+- https://github.com/micronaut-projects/micronaut-problem-json/releases/tag/v2.3.0[Micronaut SQL to 1.1.0]
+- https://github.com/micronaut-projects/micronaut-problem-json/releases/tag/v2.3.0[Micronaut Problem JSON to 2.3.0]
+- https://github.com/micronaut-projects/micronaut-grpc/releases/tag/v3.3.0[Micronaut GRPC to 3.3.0] allows exposing a gRPC Health Check for a grpc-server.
+- https://github.com/micronaut-projects/micronaut-serialization/releases/tag/v1.1.0[Micronaut Serialization to 1.1.0]. It allows the serialization and deserialization of object arrays.
+- https://github.com/micronaut-projects/micronaut-openapi/releases/tag/v4.1.0[Micronaut OpenAPI to 4.1.0] updates to Swagger 2.2.0.
+- https://github.com/micronaut-projects/micronaut-r2dbc/releases/tag/v3.0.0[Micronaut R2DBC to 3.0.0] updates to R2DBC `1.0.0.RELEASE`.
+- https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.6.0[Micronaut Security to 3.6.0].
+- https://github.com/micronaut-projects/micronaut-cache/releases/tag/v3.4.1[Micronaut Cache to 3.4.1].
+- https://github.com/micronaut-projects/micronaut-coherence/releases/tag/v3.4.1[Micronaut Coherence to 3.4.1].
+
+Several modules publish a BOM (Bill of Materials) or use a  Gradle Version Catalogs:
+
+- https://github.com/micronaut-projects/micronaut-jaxrs/releases/tag/v3.3.0[Micronaut JAX-RS to 3.3.0]
+- https://github.com/micronaut-projects/micronaut-picocli/releases/tag/v4.2.1[Micronaut Picocli to 4.2.1]
+- https://github.com/micronaut-projects/micronaut-acme/releases/tag/v3.2.0[Micronaut ACME to 3.2.0].
+- https://github.com/micronaut-projects/micronaut-mongodb/releases/tag/v4.2.0[Micronaut MongoDB to 4.2.0]
+- https://github.com/micronaut-projects/micronaut-mqtt/releases/tag/v2.2.0[Micronaut MQTT to 2.2.0].
+- https://github.com/micronaut-projects/micronaut-kafka/releases/tag/v4.3.0[Micronaut Kafka to 4.3.0].
+
+=== Schema Migration Modules
+
+* https://github.com/micronaut-projects/micronaut-flyway/releases/tag/v5.3.0[Micronaut Flyway 5.3.0] updates Flyway to 8.5.8.
+* https://github.com/micronaut-projects/micronaut-liquibase/releases/tag/v5.3.0[Micronaut Liquibase 5.3.0] updates Liquibase to 4.9.1
+
+
 == 3.4.0
 
 === Localized Message Source
