--- a/src/main/docs/guide/httpServer/serverConfiguration/nettyClientPipeline.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/nettyClientPipeline.adoc
@@ -11,3 +11,5 @@ snippet::io.micronaut.docs.netty.LogbookPipelineCustomizer[tags="imports,class",
 <1> `LogbookPipelineCustomizer` listens for a api:http.netty.channel.ChannelPipelineCustomizer[] and requires the definition of a `Logbook` bean
 <2> Use of api:http.netty.channel.ChannelPipelineCustomizer[] is deprecated for the server. Use a api:http.server.netty.ServerNettyCustomizer[] instead.
 <3> if the bean being created is the client, the client handler is registered
+
+WARNING: Logbook has a https://github.com/zalando/logbook/issues/1216[major bug] that limits its usefulness with netty.
