--- a/src/main/docs/guide/management/buildingEndpoints/endpointConfiguration.adoc
+++ b/src/main/docs/guide/management/buildingEndpoints/endpointConfiguration.adoc
@@ -25,4 +25,4 @@ endpoints:
     sensitive: Boolean
 ----
 
-NOTE: The base path for all endpoints is `/` by default. If you prefer the endpoints to be available under a different base path, configure `endpoints.all.path`. For example, if the value is set to `/endpoints`, the foo endpoint will be accessible at `/endpoints/foo`.
+NOTE: The base path for all endpoints is `/` by default. If you prefer the endpoints to be available under a different base path, configure `endpoints.all.path`. For example, if the value is set to `/endpoints/`, the foo endpoint will be accessible at `/endpoints/foo`, relative to the context path. Note that the leading and trailing `/` are required for `endpoints.all.path` unless `micronaut.server.context-path` is set, in which case the leading `/` isn't necessary.
