--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -1,5 +1,78 @@
 //Micronaut {version} includes the following changes:
 
+== 3.6.0
+
+Key features:
+
+- https://micronaut-projects.github.io/micronaut-test-resources/latest/guide/#introduction[Test Resources]
+- https://micronaut-projects.github.io/micronaut-sql/latest/guide/#hibernate-reactive[Hibernate Reactive]
+- https://micronaut-projects.github.io/micronaut-tracing/latest/guide/#opentelemetry[OpenTelemetry]
+- https://micronaut-projects.github.io/micronaut-azure/latest/guide/#azureKeyVault[Azure Vault]
+- https://www.graalvm.org/release-notes/22_2/[GraalVM 22.2 Support]
+- https://nubesgen.com/[NubesGen integration]
+
+Please read the https://micronaut.io/2022/08/04/micronaut-framework-3-6-0-released/[Micronaut Framework 3.6.0 announcement blog post]. You will find a detailed overview of what’s new in Micronaut 3.6.0.
+
+Micronaut Core features:
+
+=== Don't apply a @Filter for services
+
+It is possible to exclude services from an HTTP Client Filter with the member `excludeServiceId` of `@Filter.`
+
+```java
+@Filter(patterns = '/**', excludeServiceId = 'authClient')
+public class AppHttpClientFilter implements HttpClientFilter {
+```
+
+=== Netty runtime
+
+This version upgrades https://netty.io[Netty] from 4.1.77 to 4.1.79. Moreover, it contains improvements to the API to https://docs.micronaut.io/snapshot/guide/#nettyClientPipeline[configure the Netty Client Pipeline] and to https://docs.micronaut.io/snapshot/guide/#nettyServerPipeline[configure the Netty Server Pipeline].
+
+=== Improvements to HtttpClientException
+
+If present a `serviceId` field is populated in the `HttpClientException` and shown in the exception message.
+
+=== Modules Upgrades
+
+- Micronaut AWS 3.5.3 to 3.7.0
+- Micronaut Azure 3.2.3 to 3.3.0
+- Micronaut Cache 3.4.1 to 3.5.0
+- Micronaut Cassandra 4.0.0 to 5.1.1
+- Micronaut Coherence 3.4.1 to 3.5.1
+- Micronaut Data 3.4.3 to 3.7.2
+- Micronaut Elasticsearch 4.2.0 to 4.3.0
+- Micronaut Email 1.2.3 to 1.3.1
+- Micronaut Flyway 5.3.0 to 5.4.0
+- Micronaut GCP 4.2.1 to 4.4.0
+- Micronaut GraphQL 3.0.0 to 3.1.0
+- Micronaut Groovy 3.1.0 to 3.2.0
+- Micronaut JaxRS 3.3.0 to 3.4.0
+- Micronaut JMX 3.0.0 to 3.1.0
+- Micronaut Kafka 4.3.1 to 4.4.0
+- Micronaut Micrometer 4.3.0 to 4.4.0
+- Micronaut Microstream 1.0.0-M1 to 1.0.0
+- Micronaut Liquibase 5.3.0 to 5.4.1
+- Micronaut Mongo 4.2.0 to 4.4.0
+- Micronaut Neo4J 5.0.0 to 5.1.0
+- Micronaut Nats 3.0.0 to 3.1.0
+- Micronaut OpenAPI 4.2.2 to 4.4.3
+- Micronaut Picocli 4.2.1 to 4.3.0
+- Micronaut Problem 2.3.1 to 2.4.0
+- Micronaut RabbitMQ 3.1.0 to 3.3.0
+- Micronaut R2DBC 3.0.0 to 3.0.1
+- Micronaut Reactor 2.2.3 to 2.3.1
+- Micronaut Redis 5.2.0 to 5.3.0
+- Micronaut RxJava3 2.2.1 to 2.3.0
+- Micronaut Serialization 1.1.1 to 1.3.0
+- Micronaut Servlet 3.2.3 to 3.3.0
+- Micronaut Spring 4.1.1 to 4.2.1
+- Micronaut SQL 4.4.1 to 4.6.3
+- Micronaut Test 3.3.1 to 3.4.0
+- Micronaut TOML 1.0.0 to 1.1.1
+- Micronaut Tracing 4.1.1 to 4.2.1
+- Micronaut Views 3.4.0 to 3.5.0
+- Micronaut Jackson XML 3.0.1 to 3.1.0
+
 == 3.5.0
 
 === GraalVM 22.1.0
