--- a/src/main/docs/guide/appendix/architecture/aopArch.adoc
+++ b/src/main/docs/guide/appendix/architecture/aopArch.adoc
@@ -38,7 +38,7 @@ image::arch/aop.png[]
 The api:inject.writer.BeanDefinitionWriter[] will generate the regular classes generated for every bean including:
 
 * `$NotNullExample$Definition.class` - The original undecorated bean definition (see <<iocArch, Bean Definitions>>)
-* `$NotNullExample$Definition$Exec.class` - An implementation of api:context.ExecutableMethodsDefinition[] containing logic that allows dispatching to each intercepted method without using reflection.
+* `$NotNullExample$Definition$Exec.class` - An implementation of api:inject.ExecutableMethodsDefinition[] containing logic that allows dispatching to each intercepted method without using reflection.
 
 And the api:aop.writer.AopProxyWriter[] will decorate this behaviour and generate 3 additional classes:
 
@@ -55,22 +55,22 @@ An implementation will create a constructor which is used to wire in the depende
 [source,java]
 ----
 @Generated
-class $NotNullExample$Definition$Intercepted 
+class $NotNullExample$Definition$Intercepted
 extends NotNullExample implements Intercepted { // <1>
     private final Interceptor[][] $interceptors = new Interceptor[1][];
     private final ExecutableMethod[] $proxyMethods = new ExecutableMethod[1];
 
     public $NotNullExample$Definition$Intercepted(
-        BeanResolutionContext resolution, 
-        BeanContext context, 
-        Qualifier qualifier, 
+        BeanResolutionContext resolution,
+        BeanContext context,
+        Qualifier qualifier,
         List<Interceptor> interceptors) {
         Exec executableMethods = new Exec(true); // <2>
         this.$proxyMethods[0] = executableMethods.getExecutableMethodByIndex(0); // <3>
         this.$interceptors[0] = InterceptorChain
             .resolveAroundInterceptors(
-                context, 
-                this.$proxyMethods[0], 
+                context,
+                this.$proxyMethods[0],
                 interceptors
         );  // <4>
     }
@@ -78,7 +78,7 @@ extends NotNullExample implements Intercepted { // <1>
 ----
 
 <1> The `@Generated` subclass extends from the decorated type and implements the api:aop.Intercepted[] interface
-<2> An instance of api:context.ExecutableMethodsDefinition[] is constructed to resolve reflection-free dispatchers to the original method.
+<2> An instance of api:inject.ExecutableMethodsDefinition[] is constructed to resolve reflection-free dispatchers to the original method.
 <3> An internal array called `$proxyMethods` holds a reference for to each api:inject.ExecutableMethod[] instance used to proxy the invocation.
 <4> An internal array called `$interceptors` holds references to which api:aop.Interceptor[] instances apply to each method since an ann:aop.InterceptorBinding[] can be type or method level these may differ for each method.
 
@@ -91,9 +91,9 @@ public void doWork(String taskName) {
     ExecutableMethod method = this.$proxyMethods[0];
     Interceptor[] interceptors = this.$interceptors[0]; // <1>
     MethodInterceptorChain chain = new MethodInterceptorChain( // <2>
-        interceptors, 
-        this, 
-        method, 
+        interceptors,
+        this,
+        method,
         new Object[]{taskName}
     );
     chain.proceed(); // <3>
@@ -110,7 +110,7 @@ In this arrangement the proxy and the proxy target are the same object, with int
 
 However, this behaviour can be customized using the ann:aop.Around[] annotation.
 
-By setting `@Around(proxyTarget=true)` the generated code will also implement the api:aop.InterceptedProxy[] interface which defines a single method called `interceptedTarget()` that resolves the target object the proxy should delegate method calls to. 
+By setting `@Around(proxyTarget=true)` the generated code will also implement the api:aop.InterceptedProxy[] interface which defines a single method called `interceptedTarget()` that resolves the target object the proxy should delegate method calls to.
 
 NOTE: The default behaviour (`proxyTarget=false`) is more efficient memory wise as only a single api:inject.BeanDefinition[] is required and a single instance of the proxied type.
 
@@ -130,7 +130,7 @@ Method interception via `AROUND` advice is typically used to define logic that a
 
 When multiple api:aop.Interceptor[] instances apply to a single method it may be important from a security perspective that these interceptors execute in a specific order.
 
-The api:aop.Interceptor[] interface extends the api:core.order.Ordered[] interface to enable the developer to control interceptor ordering by overriding the `getOrder()` method. 
+The api:aop.Interceptor[] interface extends the api:core.order.Ordered[] interface to enable the developer to control interceptor ordering by overriding the `getOrder()` method.
 
 When the api:aop.chain.MethodInterceptorChain[] is constructed and multiple interceptors are present they are ordered with `HIGHEST` priority interceptors executed first.
 
