--- a/src/main/docs/guide/httpServer/serverConfiguration/nettyClientPipeline.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/nettyClientPipeline.adoc
@@ -1,4 +1,4 @@
-You can customize the Netty client pipeline by writing a <<events, Bean Event Listener>> that listens for the creation of api:io.micronaut.http.server.netty.NettyClientCustomizer.Registry[].
+You can customize the Netty client pipeline by writing a <<events, Bean Event Listener>> that listens for the creation of a api:http.client.netty.NettyClientCustomizer.Registry[].
 
 The api:http.netty.channel.ChannelPipelineCustomizer[] interface defines constants for the names of the various handlers Micronaut registers.
 
@@ -6,9 +6,9 @@ As an example the following code sample demonstrates registering the https://git
 
 snippet::io.micronaut.docs.netty.LogbookNettyClientCustomizer[tags="imports,class", indent=0, title="Customizing the Netty server pipeline for Logbook"]
 
-<1> `LogbookNettyClientCustomizer` listens for a api:http.server.netty.LogbookNettyClientCustomizer.Registry[] and requires the definition of a `Logbook` bean
+<1> `LogbookNettyClientCustomizer` listens for a api:http.client.netty.NettyClientCustomizer.Registry[] and requires the definition of a `Logbook` bean
 <2> The root customizer is initialized without a channel and registered
-<3> The actual customizer implements api:http.server.netty.NettyClientCustomizer[]
+<3> The actual customizer implements api:http.client.netty.NettyClientCustomizer[]
 <4> When a new channel is created, a new, specialized customizer is created for that channel
 <5> When the client signals that the stream pipeline has been fully constructed, the logbook handler is registered
 
