--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -184,20 +184,20 @@ https://micronaut-projects.github.io/micronaut-aot/latest/guide/[Micronaut AOT] 
 
 For more details, check the https://micronaut-projects.github.io/micronaut-maven-plugin/latest/examples/aot.html[Micronaut Maven Plugin documentation].
 
-=== Micronaut TOML 
+=== Micronaut TOML
 
-https://micronaut-projects.github.io/micronaut-toml/latest/guide/[Micronaut TOML] allows you to write your application configuration with https://toml.io/en/[TOML] in addition to `Properties`, `YAML`, `Groovy` or `Config4k`. 
+https://micronaut-projects.github.io/micronaut-toml/latest/guide/[Micronaut TOML] allows you to write your application configuration with https://toml.io/en/[TOML] in addition to `Properties`, `YAML`, `Groovy` or `Config4k`.
 
 === Micronaut Security
 
-https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.4.0[Micronaut Security 3.4.1] responds with an error when an authenticated user visits a sensitive endpoint. This forces the developer to define how they want their application to behave in that scenario. Read the https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.4.0[release notes] and the https://micronaut-projects.github.io/micronaut-security/latest/guide/#builtInEndpointsAccess[documentation] to learn more. 
+https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.4.0[Micronaut Security 3.4.1] responds with an error when an authenticated user visits a sensitive endpoint. This forces the developer to define how they want their application to behave in that scenario. Read the https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.4.0[release notes] and the https://micronaut-projects.github.io/micronaut-security/latest/guide/#builtInEndpointsAccess[documentation] to learn more.
 
 === BOM Modules
 
-Several projects include a BOM (Bills of Materials) module: 
+Several projects include a BOM (Bills of Materials) module:
 
 - https://github.com/micronaut-projects/micronaut-azure/releases/tag/v3.1.0[Micronaut Azure 3.1.0]
-- https://github.com/micronaut-projects/micronaut-gcp/releases/tag/v4.1.0[Micronaut GCP 4.1.0]. It includes updates to the latest versions of Google Cloud dependencies. 
+- https://github.com/micronaut-projects/micronaut-gcp/releases/tag/v4.1.0[Micronaut GCP 4.1.0]. It includes updates to the latest versions of Google Cloud dependencies.
 - https://github.com/micronaut-projects/micronaut-kotlin/releases/tag/v3.2.0[Micronaut Kotlin 3.2.0]
 - https://github.com/micronaut-projects/micronaut-mongodb/releases/tag/v4.1.0[Micronaut MongoDB 4.1.0]
 - https://github.com/micronaut-projects/micronaut-mqtt/releases/tag/v2.1.0[Micronaut MQTT 2.1.0]
@@ -206,13 +206,13 @@ Several projects include a BOM (Bills of Materials) module:
 - https://github.com/micronaut-projects/micronaut-rxjava2/releases/tag/v1.2.0[Micronaut RxJava2 1.2.0]
 - https://github.com/micronaut-projects/micronaut-rxjava3/releases/tag/v2.2.0[Micronaut RxJava3 2.2.0]
 - https://github.com/micronaut-projects/micronaut-security/releases/tag/v3.4.0[Micronaut Security 3.4.1]
-- https://github.com/micronaut-projects/micronaut-servlet/releases/tag/v3.2.0[Micronaut Servlet 3.2.0]. It includes updates to Tomcat and Undertow dependencies. 
+- https://github.com/micronaut-projects/micronaut-servlet/releases/tag/v3.2.0[Micronaut Servlet 3.2.0]. It includes updates to Tomcat and Undertow dependencies.
 
 === Other Module Upgrades
 
-- https://github.com/micronaut-projects/micronaut-aws/releases/tag/v3.2.0[Micronaut AWS 3.2.0] updates to the latest version of AWS SDK, ASK SDK and AWS Serverless Java Container. 
+- https://github.com/micronaut-projects/micronaut-aws/releases/tag/v3.2.0[Micronaut AWS 3.2.0] updates to the latest version of AWS SDK, ASK SDK and AWS Serverless Java Container.
 - https://github.com/micronaut-projects/micronaut-email/releases/tag/v1.1.0[Micronaut Email 1.1.0] updates to the Sendgrid 4.8.3 and contains improvements for `javamail` module users.
-- https://github.com/micronaut-projects/micronaut-test/releases/tag/v3.1.0[Micronaut Test 3.1.0] updates the underlying testing dependencies.  
+- https://github.com/micronaut-projects/micronaut-test/releases/tag/v3.1.0[Micronaut Test 3.1.0] updates the underlying testing dependencies.
 
 == 3.3.0
 
@@ -234,7 +234,7 @@ It is now possible to configure the default Netty buffer allocator. See the http
 
 === Improved Flexibility in Class Style
 
-Many features of the Micronaut framework rely on the convention of getters and setters. Due to things like records and builders, the method names we look for are now configurable with the ann:core.annotation.AccessorStyle[] annotation. For example, the annotation can be placed on ann:context.annotation.ConfigurationProperties[] beans to allow for binding configuration to methods that do not begin with `set`. It can also be used with classes annotated with ann:core.annotation.Introspected[].
+Many features of the Micronaut framework rely on the convention of getters and setters. Due to things like records and builders, the method names we look for are now configurable with the ann:core.annotation.AccessorsStyle[] annotation. For example, the annotation can be placed on ann:context.annotation.ConfigurationProperties[] beans to allow for binding configuration to methods that do not begin with `set`. It can also be used with classes annotated with ann:core.annotation.Introspected[].
 
 === Access Log Exclusions
 
