Resolve issues with Missing Local Resources Check for the `docs` task (#7977)
* Resolving issues with Missing Local Resources Check for the `docs` task, as well as fixing some other out of date links (warnings and errors).

closes #7972
relates to #6882

* changes to address review feedback

--- a/src/main/docs/guide/httpServer/errorHandling/exceptionHandler/builtInExceptionHandlers.adoc
+++ b/src/main/docs/guide/httpServer/errorHandling/exceptionHandler/builtInExceptionHandlers.adoc
@@ -9,7 +9,7 @@ Micronaut ships with several built-in handlers:
 | api:core.convert.exceptions.ConversionErrorException[]
 | api:http.server.exceptions.ConversionErrorHandler[]
 | api:web.router.exceptions.DuplicateRouteException[]
-| api:http.server.netty.converters.DuplicateRouteHandler[]
+| api:http.server.exceptions.DuplicateRouteHandler[]
 | api:http.exceptions.HttpStatusException[]
 | api:http.server.exceptions.HttpStatusHandler[]
 | `com.fasterxml.jackson.core.JsonProcessingException`
@@ -19,7 +19,7 @@ Micronaut ships with several built-in handlers:
 | api:core.bind.exceptions.UnsatisfiedArgumentException[]
 | api:http.server.exceptions.UnsatisfiedArgumentHandler[]
 | api:web.router.exceptions.UnsatisfiedRouteException[]
-| api:http.server.netty.converters.UnsatisfiedRouteHandler[]
+| api:http.server.exceptions.UnsatisfiedRouteHandler[]
 | `org.grails.datastore.mapping.validation.ValidationException`
-| api:validation.exceptions.ValidationExceptionHandler[]
+| link:{micronautgroovyapi}/io/micronaut/configuration/gorm/validation/ValidationExceptionHandler.html[ValidationExceptionHandler]
 |===
