--- a/src/main/docs/guide/introduction/whatsNew.adoc
+++ b/src/main/docs/guide/introduction/whatsNew.adoc
@@ -1,5 +1,11 @@
 //Micronaut {version} includes the following changes:
 
+== 4.0.0
+
+=== Other Dependency Upgrades
+
+- Kotlin 1.7.10
+
 == 3.7.0
 
 Several improvements:
