--- a/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
+++ b/src/main/docs/guide/httpClient/lowLevelHttpClient/clientConfiguration.adoc
@@ -75,17 +75,17 @@ Alternatively, if you don't use service discovery you can use the `configuration
 ReactorHttpClient httpClient;
 ----
 
-=== Connection Pooling and HTTP 2
+=== Connection Pooling and HTTP/2
 
-Connections using normal HTTP (without TLS/SSL) use HTTP 1.1. This can be configured using the `plaintext-mode` configuration option.
+Connections using normal HTTP (without TLS/SSL) use HTTP/1.1. This can be configured using the `plaintext-mode` configuration option.
 
-Secure connections (i.e. HTTP**S**, with TLS/SSL) use a feature called "Application Layer Protocol Negotiation" (ALPN) that is part of TLS to select the HTTP version. If the server supports HTTP 2, the Micronaut HTTP Client will use that capability by default, but if it doesn't, HTTP 1.1 is still supported. This is configured using the `alpn-modes` option, which is a list of supported ALPN protocol IDs (`"h2"` and `"http/1.1"`).
+Secure connections (i.e. HTTP**S**, with TLS/SSL) use a feature called "Application Layer Protocol Negotiation" (ALPN) that is part of TLS to select the HTTP version. If the server supports HTTP/2, the Micronaut HTTP Client will use that capability by default, but if it doesn't, HTTP/1.1 is still supported. This is configured using the `alpn-modes` option, which is a list of supported ALPN protocol IDs (`"h2"` and `"http/1.1"`).
 
-NOTE: The HTTP 2 standard forbids the use of certain less secure TLS cipher suites for HTTP 2 connections. When the HTTP client supports HTTP 2 (which is the default), it will not support those cipher suites. Removing `"h2"` from `alpn-modes` will enable support for all cipher suites.
+NOTE: The HTTP/2 standard forbids the use of certain less secure TLS cipher suites for HTTP/2 connections. When the HTTP client supports HTTP/2 (which is the default), it will not support those cipher suites. Removing `"h2"` from `alpn-modes` will enable support for all cipher suites.
 
-Each HTTP 1.1 connection can only support one request at a time, but can be reused for subsequent requests using the `keep-alive` mechanism. HTTP 2 connections can support any number of concurrent requests.
+Each HTTP/1.1 connection can only support one request at a time, but can be reused for subsequent requests using the `keep-alive` mechanism. HTTP/2 connections can support any number of concurrent requests.
 
-To remove the overhead of opening a new connection for each request, the Micronaut HTTP Client will reuse HTTP connections wherever possible. They are managed in a _connection pool_. HTTP 1.1 connections are kept around using keep-alive and are used for new requests, and for HTTP 2, a single connection is used for all requests.
+To remove the overhead of opening a new connection for each request, the Micronaut HTTP Client will reuse HTTP connections wherever possible. They are managed in a _connection pool_. HTTP/1.1 connections are kept around using keep-alive and are used for new requests, and for HTTP/2, a single connection is used for all requests.
 
 .Manually configuring HTTP services
 [source,yaml]
@@ -101,7 +101,7 @@ micronaut:
           max-concurrent-http1-connections: 50 # <1>
 ----
 
-<1> Limit maximum concurrent HTTP 1.1 connections
+<1> Limit maximum concurrent HTTP/1.1 connections
 
 See the API for link:{api}/io/micronaut/http/client/HttpClientConfiguration.ConnectionPoolConfiguration.html[ConnectionPoolConfiguration] for details on available pool configuration options.
 
